8.18  2019-06-20
  - Welcome to the Mojolicious core team CandyAngel, Christopher Rasch-Olsen
    Raa and Dan Book.
  - Deprecated the use of the config stash value and $config variable in
    templates by Mojolicious::Plugin::Config. You can use the config helper
    instead. Unfortunately there is no good way to warn users, so this
    deprecation will be in effect until the next major release.
  - Improved Mojo::Base flags not to require a certain order.
  - Fixed a typo in the 425 status message in Mojo::Message::Response.
    (CandyAngel)
  - Fixed a missing deprecation warning in Mojo::Promise. (marcus)

8.17  2019-05-23
  - Fixed a bug in Mojo::UserAgent where the request timeout would not work for
    keep-alive requests. (ilmari)

8.16  2019-05-14
  - Improved Mojo::Headers to reject characters in header values that would
    corrupt the HTTP message.
  - Fixed getopt function in Mojo::Util to behave more like GetOptionsFromArray.
    (jberger, reneeb)

8.15  2019-04-26
  - Updated jQuery to version 3.4.0.
  - Improved wait method in Mojo::Promise not to be affected by manually stopped
    event loops. (Grinnz)
  - Fixed a bug where the new method in Mojo::Promise could not be passed a
    callback to wrap continuation-passing style APIs, which is incompatible with
    the JavaScript API.

8.14  2019-04-18
  - Added EXPERIMENTAL timer method to Mojo::Promise.
  - Added header_exists and header_exists_not methods to Test::Mojo.
  - Fixed a bug where the finally callback in Mojo::Promise was passed a value,
    which is incompatible with the JavaScript API.
  - Fixed a bug in Mojo::Promise where the finally method could change promise
    values.
  - Fixed a merge bug in Mojo::Parameters where multiple values sharing the same
    name could get lost.

8.13  2019-03-21
  - Added EXPERIMENTAL map method to Mojo::Promise. (jberger)
  - Added EXPERIMENTAL min_compress_size attribute to Mojolicious::Renderer.
    (CandyAngel, mjemmeson)